crates/weft-snapshots/tests/snapshots/solid-tsx/corpus-appearance.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-appearance as solid-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _text(v: unknown): string {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _on(v: unknown): boolean {
  return v === "false" ? false : Boolean(v);
}

function _num(v: unknown, integer: boolean, min?: number, max?: number): unknown {
  if (typeof v !== "number") return v;
  if (!Number.isFinite(v)) return undefined;
  if (integer) v = Math.round(v);
  if (min !== undefined) v = Math.max(v, min);
  if (max !== undefined) v = Math.min(v, max);
  return v;
}

function _squash(v: string): string {
  return v.trim().replace(/\s+/g, " ");
}

function _numeric(v: unknown): number | undefined {
  if (typeof v === "number") return Number.isFinite(v) ? v : undefined;
  if (typeof v === "string" && /^-?(?:\d+(?:\.\d+)?|\.\d+)(?:[eE][-+]?\d+)?$/.test(v.trim())) {
    const n = Number(v);
    return Number.isFinite(n) ? n : undefined;
  }
  return undefined;
}

function _tidy(x: number, ...inputs: number[]): number {
  const d = (y: number): number => {
    const [m = "", e] = String(y).split("e");
    return Math.max(0, (m.split(".")[1]?.length ?? 0) - (e === undefined ? 0 : Number(e)));
  };
  return Number(x.toFixed(Math.min(100, Math.max(...inputs.map(d)))));
}

function _span(min: unknown, max: unknown, step: unknown): { min: number; max: number; step: number } {
  const lo = _numeric(min) ?? 0;
  const st = _numeric(step);
  return { min: lo, max: Math.max(_numeric(max) ?? 100, lo), step: st !== undefined && st > 0 ? st : 1 };
}

function _slide(value: unknown, s: { min: number; max: number; step: number }): string {
  const v = Math.min(Math.max(_numeric(value) ?? s.min, s.min), s.max);
  let on = s.min + Math.floor((v - s.min) / s.step + 0.5) * s.step;
  if (on > s.max) on -= s.step;
  return String(_tidy(Math.max(on, s.min), s.min, s.step));
}

function _bounds(min: unknown, max: unknown, step: unknown): { min?: number; max?: number; step: number } {
  const lo = _numeric(min);
  const hi = _numeric(max);
  const st = _numeric(step);
  const b: { min?: number; max?: number; step: number } = { step: st !== undefined && st > 0 ? st : 1 };
  if (lo !== undefined) b.min = lo;
  if (hi !== undefined) b.max = lo === undefined ? hi : Math.max(hi, lo);
  return b;
}

function _clamp(v: number, b: { min?: number; max?: number; step: number }): number {
  if (b.min !== undefined) v = Math.max(v, b.min);
  if (b.max !== undefined) v = Math.min(v, b.max);
  return v;
}

function _count(value: unknown, b: { min?: number; max?: number; step: number }): number {
  return _clamp(_numeric(value) ?? 0, b);
}

function _step(current: number, direction: 1 | -1, b: { min?: number; max?: number; step: number }): number {
  return _tidy(_clamp(current + direction * b.step, b), current, b.step);
}

function _dateType(v: string): "date" | "time" | "datetime" {
  return v === "time" || v === "datetime" ? v : "date";
}

function _dateText(type: string, value: string): string {
  const day = (s: string): boolean => {
    const m = /^(\d{4})-(\d{2})-(\d{2})$/.exec(s);
    if (!m) return false;
    const [year, month, d] = [Number(m[1]), Number(m[2]), Number(m[3])];
    if (year < 1 || month < 1 || month > 12 || d < 1) return false;
    const leap = (year % 4 === 0 && year % 100 !== 0) || year % 400 === 0;
    return d <= [31, leap ? 29 : 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31][month - 1]!;
  };
  const time = (s: string): boolean => /^([01]\d|2[0-3]):[0-5]\d$/.test(s);
  if (type === "date") return day(value) ? value : "";
  if (type === "time") return time(value) ? value : "";
  const [d = "", t = "", ...rest] = value.split("T");
  return rest.length === 0 && day(d) && time(t) ? value : "";
}

function _color(v: string): string {
  return /^#[0-9a-fA-F]{6}$/.test(v) ? v.toLowerCase() : "#000000";
}

export default function WeftScreen(props: WeftProps) {
  return (
    <main data-weft-id="appearance" aria-label="Appearance">
      <h1 data-weft-id="title">Appearance</h1>
      <div data-weft-id="options" style={{ gap: "var(--weft-space-md)", display: "flex", "flex-direction": "column", "align-items": "stretch" }}>
        <div data-weft-id="theme" aria-label="Theme" role="radiogroup" data-weft-segmented="">
          <span aria-hidden="true">Theme</span>
          <label>
            <input data-weft-id="theme-light" type="radio" name={"weft-theme"} value="light" aria-label="Light" checked={_text(props.data?.theme) !== "" && "light" === _text(props.data?.theme)} onChange={() => props.onChange?.("$.theme", "light")} />
            <span aria-hidden="true">Light</span>
          </label>
          <label>
            <input data-weft-id="theme-dark" type="radio" name={"weft-theme"} value="dark" aria-label="Dark" disabled checked={_text(props.data?.theme) !== "" && "dark" === _text(props.data?.theme)} onChange={() => props.onChange?.("$.theme", "dark")} />
            <span aria-hidden="true">Dark</span>
          </label>
          <label>
            <input data-weft-id="theme-auto" type="radio" name={"weft-theme"} value="auto" aria-label={"" || !(_text(props.data?.automatic).trim() === "") ? _squash(_text(props.data?.automatic)) : ""} checked={_text(props.data?.theme) !== "" && "auto" === _text(props.data?.theme)} onChange={() => props.onChange?.("$.theme", "auto")} />
            <span aria-hidden="true">
              {!(_text(props.data?.automatic).trim() === "") ? _squash(_text(props.data?.automatic)) : "" || ""}
            </span>
          </label>
        </div>
        <label>
          <span aria-hidden="true">Text size</span>
          {(() => {
            const _s = _span(12, 24, undefined);
            return (
              <input data-weft-id="size" type="range" aria-label="Text size" min={_s.min} max={_s.max} step={_s.step} value={_slide(_num(props.data?.size, false, undefined, undefined), _s)} onInput={(_e) => { const _v = _numeric(_e.currentTarget.value); if (_v !== undefined) props.onChange?.("$.size", _v); }} />
            );
          })()}
        </label>
        <label>
          <span aria-hidden="true">Contrast</span>
          {(() => {
            const _s = _span(undefined, undefined, undefined);
            return (
              <input data-weft-id="contrast" type="range" aria-label="Contrast" min={_s.min} max={_s.max} step={_s.step} disabled value={_slide(_num(props.data?.contrast, false, undefined, undefined), _s)} onInput={(_e) => { const _v = _numeric(_e.currentTarget.value); if (_v !== undefined) props.onChange?.("$.contrast", _v); }} />
            );
          })()}
        </label>
        <label>
          <span aria-hidden="true">Columns</span>
          {(() => {
            const _b = _bounds(undefined, undefined, undefined);
            return (
              <span data-weft-stepper="">
                <button type="button" tabindex={-1} aria-hidden="true" data-weft-step="down" onClick={(_e) => { const _i = _e.currentTarget.parentElement?.querySelector("input"); const _n = _step(_numeric(_i?.value) ?? _count(_num(props.data?.columns, false, undefined, undefined), _b), -1, _b); props.onChange?.("$.columns", _n); }}>{"−"}</button>
                <input data-weft-id="columns" type="number" aria-label="Columns" min={_b.min} max={_b.max} step={_b.step} value={String(_count(_num(props.data?.columns, false, undefined, undefined), _b))} onInput={(_e) => { const _v = _numeric(_e.currentTarget.value); if (_v !== undefined) props.onChange?.("$.columns", _v); }} />
                <button type="button" tabindex={-1} aria-hidden="true" data-weft-step="up" onClick={(_e) => { const _i = _e.currentTarget.parentElement?.querySelector("input"); const _n = _step(_numeric(_i?.value) ?? _count(_num(props.data?.columns, false, undefined, undefined), _b), 1, _b); props.onChange?.("$.columns", _n); }}>+</button>
              </span>
            );
          })()}
        </label>
        <label>
          <span aria-hidden="true">Zoom</span>
          {(() => {
            const _b = _bounds(undefined, 3, 0.5);
            return (
              <span data-weft-stepper="">
                <button type="button" tabindex={-1} aria-hidden="true" data-weft-step="down" disabled={_on(props.data?.locked)} onClick={(_e) => { const _i = _e.currentTarget.parentElement?.querySelector("input"); const _n = _step(_numeric(_i?.value) ?? _count(_num(props.data?.zoom, false, undefined, undefined), _b), -1, _b); props.onChange?.("$.zoom", _n); }}>{"−"}</button>
                <input data-weft-id="zoom" type="number" aria-label="Zoom" min={_b.min} max={_b.max} step={_b.step} disabled={_on(props.data?.locked)} value={String(_count(_num(props.data?.zoom, false, undefined, undefined), _b))} onInput={(_e) => { const _v = _numeric(_e.currentTarget.value); if (_v !== undefined) props.onChange?.("$.zoom", _v); }} />
                <button type="button" tabindex={-1} aria-hidden="true" data-weft-step="up" disabled={_on(props.data?.locked)} onClick={(_e) => { const _i = _e.currentTarget.parentElement?.querySelector("input"); const _n = _step(_numeric(_i?.value) ?? _count(_num(props.data?.zoom, false, undefined, undefined), _b), 1, _b); props.onChange?.("$.zoom", _n); }}>+</button>
              </span>
            );
          })()}
        </label>
        <label>
          <span aria-hidden="true">Accent colour</span>
          <input data-weft-id="accent" type="color" aria-label="Accent colour" disabled value={_color("#d946ef")} />
        </label>
        <label>
          <span aria-hidden="true">Member since</span>
          {(() => {
            const _t = _dateType("date");
            return (
              <input data-weft-id="since" type={_t === "datetime" ? "datetime-local" : _t} aria-label="Member since" min={_dateText(_t, "") || undefined} max={_dateText(_t, "") || undefined} disabled value={_dateText(_t, "2024-05-17")} />
            );
          })()}
        </label>
        {(() => {
          const _o = [
            { value: "Inter", el: (
              <option data-weft-id="font-inter" value="Inter">Inter</option>
            ) },
            { value: "Menlo", el: (
              <option data-weft-id="font-mono" value="Menlo">Menlo</option>
            ) },
          ];
          return (
            <label>
              <span aria-hidden="true">Font</span>
              <input data-weft-id="font" aria-label="Font" list={"weft-font-options"} disabled value={"Inter"} />
              <datalist id={"weft-font-options"}>
                {_o.map((_x) => _x.el)}
              </datalist>
            </label>
          );
        })()}
      </div>
    </main>
  );
}
